skin/frontend/enterprise/default/css/styles.css
/* ... */
.new-product-spotlight .more-new-positioning h3 { margin-bottom:5px; font-size:11px; text-transform:uppercase; font-weight:bold; }
.new-product-spotlight .more-new { position:relative; height:335px; }
.new-product-spotlight .more-new .arrow-up { position:absolute; top:0; left:0; height:20px; width:207px; background:url(../images/callouts/electronics/more_new_arrow.gif) no-repeat; text-indent:-999em; }
.new-product-spotlight .more-new .arrow-down { position:absolute; bottom:0; left:0; height:20px; width:207px; background:url(../images/callouts/electronics/more_new_arrow.gif) no-repeat 0 100%; text-indent:-999em; }
.new-product-spotlight .more-new .content { position:absolute; top:20px; left:0; width:205px; height:295px; border-width:0 1px; border-style:solid; border-color:#dcdcdc; background:#fff; }
.new-product-spotlight .more-new ol { margin:10px 15px; padding-left:0; list-style-type:none; }
.new-product-spotlight .more-new .item { padding:10px 0 10px 85px; border-bottom:1px solid #d2d2d2; }
.new-product-spotlight .more-new .item.top {padding-top:0; }
.new-product-spotlight .more-new .item.last { border-bottom:0; padding-bottom:0; }
.new-product-spotlight .more-new .item img { float:left; margin-left:-85px; position:relative; }
.new-product-spotlight .more-new a { font-weight:bold; }
/* ======================================================================================= */


/* Content Styles ================================================================= */
.product-name { font-size:12px; font-weight:bold; color:#333; }
.product-name a { color:#333; text-decoration:underline; }
.product-name a:hover { color:#333; text-decoration:none; }

/* Product Tags */
.tags-list { margin:5px 0; }
.tags-list li { display:inline; font-size:12px; }
.tags-list li a { text-decoration:none; margin:0 2px 0 0; }
.tags-list li a:hover { text-decoration:underline; }

/* Advanced Search */
.search-summary { padding:10px 10px 0; margin:10px 0 0; font-size:12px; background:url(../images/bkg_dots.gif) repeat-x 0 0; }
.search-summary li { margin:2px 0; }

/* CMS Home Page */
.cms-home .products-grid td { width:20%; }

/* Sitemap */
.sitemap { font-size:12px; }
.sitemap li { margin:3px 0; }
/* ======================================================================================= */


/* Shopping Cart ========================================================================= */
.checkout-cart-index .col-main { padding:0; background:url(../images/bkg_cart.gif) repeat-y 100% 0; }
.checkout-cart-index .col-main .page-title { margin:0; }
.cart-empty { padding:20px; background:#fff; }
.cart .title-buttons { padding-right:15px; }
.cart .messages,
.cart .messages li { margin:0; }
.cart .checkout-types { float:right; text-align:center; }
.cart .checkout-types .btn-proceed-checkout span { background-image:url(../images/bkg_btn-co.gif); height:27px !important; padding:0 0 0 13px !important; }
.cart .checkout-types .btn-proceed-checkout span span { border:0; background-image:url(../images/bkg_btn-co.gif); padding:1px 32px 0 19px !important; color:#fff; font:bold 15px/26px Arial, Helvetica, sans-serif !important; height:26px; text-transform:none; margin:0 !important; }

/* Shopping Cart Table */
.cart-table { border-width:1px 0; }
.cart-table .item-msg { font-size:10px; }
.cart-table thead th { vertical-align:bottom; }
.cart-table tbody td { padding:12px; }
.cart-table .btn-continue { float:left; background:none; border:none; }
.cart-table .btn-continue span { background:none; border:none; text-transform:none; color:#444; text-decoration:underline; font-weight:normal; padding:0; }
.cart-table .btn-update { float:right; }

/* Shopping Cart Collateral boxes */
.cart .cart-collaterals { width:630px; padding:20px 0 10px; }
.cart .cross-inside { background:url(../images/bkg_crosssell.gif) repeat-y 0 0; }
.cart .cart-collaterals h3 { color:#000; font-weight:normal; margin:0 0 5px; }
.cart .deals { float:left; width:280px; display:inline; margin:0 0px 0 30px; font-size:12px; }
.cart .deals p,
.cart .deals label { margin:0 0 7px; display:block; }
.cart .deals .input-text { width:140px; margin:0 5px 3px 0; float:left; }
.cart .giftcard { position:relative; z-index:1; }
.cart .giftcard button.check-gc-status { clear:both; }
.cart .giftcard button.check-gc-status span { padding:0!important; background:none!important;  line-height:1.3!important; color:#444!important; height:auto!important; font-weight:normal!important; text-transform:none!important; }
.cart .giftcard button.check-gc-status span span { text-decoration:underline; font-size:12px!important; }
.cart .giftcard,
.cart .discount { margin:0 0 20px 0; }
.cart .cancel-btn { margin:5px 30px 0 0; clear:left; }
.cart .shipping { float:left; margin:0 0 0 30px; display:inline; font-size:12px; width:280px; }
.cart .shipping select { width:256px; }
.cart .shipping .input-text { width:250px; }
.cart .shipping p { margin:0 0 15px; }
.cart .shipping .buttons-set { width:256px; }
.cart .shipping .form-list label { float:none; width:auto; text-align:left; padding:0; }
.cart .shipping .form-list .input-text,
.cart .shipping .form-list select { display:block; }

.cart .crosssell { float:left; min-height:400px; width:260px; padding:0 20px 15px 30px; border:1px solid #d9d9d9; border-width:0 1px 0 0; background:#fbf3f0; }
.cart .crosssell h3 { font-size:11px; color:#cd3800; font-weight:bold; text-transform:uppercase; }
.cart .crosssell .item { padding:17px 0 0 ; }
.cart .crosssell .product-image { float:left; margin:3px -90px 0 0; }
.cart .crosssell .product-shop { margin-left:90px; }
.cart .crosssell .product-name,
.cart .crosssell .price-box,
.cart .crosssell p,
.cart .crosssell .add-to-links { margin:0 0 5px; }
.cart .crosssell .add-to-links li { margin:0; }

/* Shopping Cart Totals */
.cart .totals { float:right; width:275px; padding:23px 15px 0 15px; font-size:14px; }
.cart .totals table { width:100%; }
.cart .totals table th,
.cart .totals table td { padding:0 5px 5px; }
/* ... */

